# ustajon-agent

./: .gitignore  Cargo.toml  Program.cs  README.md  UstajonAgent.csproj  UstajonSupport.spec  client.py  requirements.txt
.github/workflows/: build.yml
src/: api.rs  config.rs  files.rs  input.rs  main.rs  network.rs  processes.rs  registry.rs  screen.rs  services.rs  system.rs  updater.rs
